--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,12 @@
 /*Create by Chen Yongjie*/
 /*E-mail:291557041@qq.com*/
 
-@font-face{font-family:iconfont;src:url(//at.alicdn.com/t/font_1462418104_8234837.eot);src:url(//at.alicdn.com/t/font_1462418104_8234837.eot?#iefix) format('embedded-opentype'),url(//at.alicdn.com/t/font_1462418104_8234837.woff) format('woff'),url(//at.alicdn.com/t/font_1462418104_8234837.ttf) format('truetype'),url(//at.alicdn.com/t/font_1462418104_8234837.svg#iconfont) format('svg')}
-
+@font-face{font-family:iconfont;src:url(//at.alicdn.com/t/font_1462762584_9301775.eot);src:url(//at.alicdn.com/t/font_1462762584_9301775.eot?#iefix) format('embedded-opentype'),url(//at.alicdn.com/t/font_1462762584_9301775.woff) format('woff'),url(//at.alicdn.com/t/font_1462762584_9301775.ttf) format('truetype'),url(//at.alicdn.com/t/font_1462762584_9301775.svg#iconfont) format('svg')}
 body{font-family: "微软雅黑"}
+a{text-decoration: none;}
 a:focus { outline:none;  -moz-outline:none;}
+.w-main {  width: 1200px;  position: relative  }
+.MC .w-main{width: 100%}
 
 /*顶部信息*/
 .yj-top{width:100%;height: 30px;min-width: 1200px; background-color: #f8f8f8;position: relative; }
@@ -41,6 +43,7 @@ a:focus { outline:none;  -moz-outline:none;}
 .yj-nav-box li{display: inline-block;height: 40px;width: 150px;text-align: center;}
 .yj-nav-box li:hover{background-color: #f29b10;}
 .yj-nav-box a{text-decoration: none;color: #fff;line-height: 40px}
+
 
 /*首页轮播大图*/
 .yj-pic-roll{height: 320px}
@@ -102,30 +105,31 @@ a:focus { outline:none;  -moz-outline:none;}
 .yj-container-txt a{ text-decoration: none;color: #666;font-size: 14px}
 .yj-container-txt a:hover{text-decoration: underline}
 .MC .yj-container-right{margin-top: 10px}
+.yj-container-left{background-color: #fff}
 
 
 /*科室导航*/
 .yj-container-box2{margin-top: 20px}
-.yj-map{margin-top: 20px;margin-right: 20px}
+.yj-map{margin-top: 20px;margin-right: 10px}
 .yj-map-box{position: relative; width: 100%;min-height: 80px;margin-top: 10px;background-color: #73cbd7}
 .yj-map-left{position: absolute;left: 0;top: 0;width :15%;min-height: 80px;text-align: center}
 .yj-map-left p{color: #fff;font-size: 24px;line-height: 80px}
-.yj-map-right{margin-left:15%; width: 85%;min-height: 80px;background-color: #eeeeee;padding-left: 20px}
+.yj-map-right{margin-left:15%; width: 85%;min-height: 80px;background-color: #eeeeee;padding-left: 8px}
 .yj-map-right li{display: inline-block;padding: 10px}
 .yj-map-right a{  text-decoration: none;color: #666;font-size: 14px}
 .yj-map-right a:hover{color: #0aa6bd}
-.MC .yj-map-left p{font-size: 16px;line-height:40px}
-.MC .yj-map-right li{padding: 2px}
+.MC .yj-map-left p{font-size: 16px;line-height:30px;letter-spacing:2px}
+.MC .yj-map-right li{padding: 5px}
 .MC .yj-map{ }
 
 /*图片栏*/
 .yj-img{ margin: 20px;}
 .yj-img-box{margin-bottom: 20px;}
-.yj-img-box img{height:140px;  width: 320px; }
+.yj-img-box img{height:140px;  width: 100%; }
 .MC .yj-img-box img{width: 33%; float: left;}
 
 /*友情链接*/
-.yj-links{margin: 10px}
+.yj-links{margin: 10px;margin-bottom: 30px}
 .yj-links li{display: inline-block;padding: 10px}
 .yj-links a{  text-decoration: none;color: #999;font-size: 14px;}
 .yj-links a:hover{ color: #286090;}
@@ -133,17 +137,17 @@ a:focus { outline:none;  -moz-outline:none;}
 .yj-links li{padding: 2px }
 
 /*底部*/
-.footer{background-color: #eeeeee;margin-top: 20px}
+.footer{background-color: #eeeeee;}
 .footer-links{ text-align: center;padding: 20px}
-.footer-links li{  display: inline-block;padding-right: 10px}
-.footer-links a{font-size: 14px;color: #666;  text-decoration: none;}
+.footer-links li{  display: inline-block;}
+.footer-links a{font-size: 14px;color: #666;  text-decoration: none;padding-right: 5px}
 .footer-links a:hover{color: #286090;}
-.footer-links-bd{border-right: 1px solid #999}
-.yj-address{  text-align: center;}
+.footer-links-bd a{border-right: 1px solid #999}
+.yj-address{  text-align: center;padding-bottom: 10px}
 .yj-address p{color: #666;font-size: 14px}
-.MC .footer-links{ text-align: left;}
+.MC .footer-links{ text-align: center;}
 .MC .footer-links li{margin-top: 5px}
-.MC .yj-address{  text-align: left;}
+.MC .yj-address{  text-align: center;}
 .MC .footer-links{padding: 10px}
 
 /*文章内容页*/
@@ -202,6 +206,79 @@ a.mj-mcmenu-title{display:block;text-decoration:none}
 .mj-mcmenu-ul a{padding-left:8px;display:block;line-height:40px;text-decoration:none;font-size:14px;color:#666;border-bottom:1px dotted #ccc}
 .mj-mcmenu-ul a:hover{background-color:#f1f1f1}
 
+/*医生介绍*/
+.f-clr-b{color: #0aa6bc}
+.yj-itdc{height: 300px;background-color: #cdf1f6}
+.yj-itdc-img{position:absolute; top: 45px; left: 20px;border-radius: 50%;height: 185px;width: 185px;border: 10px solid #fff;background-position: center;background-repeat: no-repeat;background-size: contain}
+.yj-itdc-box{position:relative;margin-left: 250px;padding-top: 70px;}
+.yj-itdc-name{position: absolute;left: 0px; font-size: 30px;display: block}
+.yj-itdc-yy{width: 100px;  height: 30px;background-color: #0aa6bc;  text-align: center;position: absolute;left: 160px;top: 75px}
+.yj-itdc-yy p{color: #fff;line-height: 30px}
+.yj-itdc-yy:hover{background-color: #407da9}
+.yj-itdc-txt{position: absolute;top: 120px;}
+.yj-itdc-txt p{font-size: 14px}
+.yj-itdc-good{position: absolute;top: 150px;border-top: 1px solid #999;padding-top: 20px;padding-right: 80px}
+.yj-itdc-good span{font-size: 14px}
+
+.yj-brief{ }
+.yj-brief-box{background-color: #f8f8f8;float: left}
+.yj-brief-left{background-color: #fff;border-right: 1px solid #c0c0c0}
+
+/*科室*/
+.yj-keshi{background-color: #f8f8f8;float: left;}
+.yj-keshi-left{border-right: 1px solid #c0c0c0;float: left;width: 100%;}
+.yj-picture{width: 100%;  height: 265px;background-size: cover;background-position: center;background-repeat: no-repeat }
+.yj-keshi-white{background-color: #fff;}
+.yj-keshi-intro{margin-left: 20px}
+.yj-keshi-connect{margin-left: 20px;margin-top: 20px}
+.yj-keshi-people{margin-top: 20px}
+.yj-keshi-paiban{margin-top: 20px}
+.yj-keshi-icon{font-family:"iconfont"; font-size:40px;font-style:normal;  display: inline-block;color: #fff;line-height: 70px}
+.yj-keshi-btn{width: 210px;height:210px;position: relative;text-align: center; margin: 30px 70px}
+.yj-keshi-box{width: 100px;height: 100px;background-color: #0aa6bc;display:inline-block;cursor: pointer}
+.yj-keshi-box-tr{position: absolute;top:0;right: 0}
+.yj-keshi-box-tl{position: absolute;top:0;left: 0}
+.yj-keshi-box-br{position: absolute;bottom:0;right: 0}
+.yj-keshi-box-bl{position: absolute;bottom:0;left: 0}
+.yj-keshi-box p{color: #fff;font-size: 16px;}
+.yj-keshi-img{background-position: center;background-size: cover;background-repeat: no-repeat;  width: 280px;height: 120px}
+.yj-keshi-phone p{font-size: 14px;color: #666}
+.yj-heshi-yygh{font-size: 14px;background-color: #0aa6bc;padding: 2px 8px;color: #fff}
+.yj-heshi-yygh:hover{background-color: #407da9}
+
+/*科室滚图*/
+.picScroll-left{width:760px;overflow:hidden;position:relative;padding:0 10px;list-style:none}
+.picScroll-left .prev{position:absolute;left:0;top:60px;font-size:28px;display:block;overflow:hidden;cursor:pointer;font-family: "宋体"}
+.picScroll-left .next{position:absolute;right:0;top:60px;font-size:28px;display:block;overflow:hidden;cursor:pointer;font-family: "宋体"}
+.picScroll-left .bd{padding:10px}
+.picScroll-left .bd ul{overflow:hidden;zoom:1}
+.picScroll-left .bd ul li{margin:0 5px;float:left;overflow:hidden;text-align:center}
+.picScroll-left .bd ul li .pic-box{position:relative;text-align:left;border:1px solid #ccc;width:230px;background-color: #f8f8f8;padding: 2px}
+.picScroll-left .bd ul li .pic-box img{width:90px;height:120px;display:block;padding:2px;}
+.picScroll-left .bd ul li .pic-box a:hover img{border-color:#999}
+.pic-box-name{display:block;position:absolute;left:100px;top:5px;font-size: 16px}
+.pic-box-brief{position:absolute;left:100px;top:30px;font-size: 12px;text-overflow: ellipsis;display: -webkit-box;  overflow: hidden;  -webkit-line-clamp: 2;  -webkit-box-orient: vertical;}
+.pic-box a{text-decoration:none;position:absolute;left:100px;top:85px; left: 120px;font-size: 14px;background-color: #0aa6bc;padding: 2px 8px;color: #fff}
+.pic-box a:hover{background-color: #407da9}
 
 
+/*医院简介*/
+.yj-location{border-left: 6px solid #0aa6bc;padding-left: 10px}
+.yj-location a{text-decoration: none;color:#999;font-size: 14px}
+.yj-location a:hover{color:#337ab7}
+.yj-location p{font-size: 14px}
+.yj-intro-guide{margin:10px 26px;background-color: #eeeeee}
+.yj-intro-white{  background-color: #fff;}
+.yj-intro-blue{color: #0aa6bc;}
+.yj-intro-guide a{text-decoration: none;color: #666;font-size: 14px}
+.yj-intro-guide li{padding: 10px;text-align: center;}
+.yj-intro-zjyy{color: #fff; background-position: center;background-repeat: no-repeat;background-size: cover}
+.yj-hospital-title{color:#666;text-align: center;font-size: 20px;border-bottom: 1px solid #c0c0c0;margin:0 20px;padding-bottom: 8px;font-weight: bold;}
+.yj-intro-gt{font-family: "宋体"; float: right;visibility: hidden;color:#0aa6bc;font-weight: bold}
 
+
+/*表格*/
+.datalist{  border:1px solid #999; font-family:Arial;  border-collapse:collapse;  background-color:#eaf5ff;font-size:14px;  }
+.datalist th{  border:1px solid #999; background-color:#4bacff; color:#FFFFFF;  font-weight:bold;  padding-top:4px; padding-bottom:4px;  padding-left:12px; padding-right:12px;  text-align:center;  }
+.datalist td{  border:1px solid #999;  text-align:left;  padding-top:4px; padding-bottom:4px;  padding-left:10px; padding-right:10px;  }
+.datalist tr.altrow{background-color:#c7e5ff;}
